# pfrecipes

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
src/pfrecipes/: cli.py  config.py  ingest.py  mcp_server.py  search.py
src/pfrecipes/loaders/: __init__.py  markdown.py  pdf.py  text.py  url.py
tests/: test_chat.py  test_ingest.py  test_loaders.py  test_mcp_server.py  test_quality.py  test_search.py
tests/fixtures/: sample_jsonld.html  sample_recipe.md  sample_recipe.txt
