[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pfrecipes"
version = "0.1.0"
description = "AI-powered personal recipe knowledge base"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-chroma>=0.2",
    "chromadb>=0.5",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ollama = [
    "langchain-ollama>=0.3",
]

[project.scripts]
pfrecipes = "pfrecipes.cli:app"
pfrecipes-mcp = "pfrecipes.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
